Slides, mixed visibility fixes

--- a/slides/src/content/7-results.scss
+++ b/slides/src/content/7-results.scss
@@ -12,4 +12,5 @@
 
 .impress-on-compilers {
   #custresults { opacity: 0; }
+  #optresults { opacity: 0.1; }
 }
